Fixed layout issues, simplified css, fixed style issues

--- a/dashboard.css
+++ b/dashboard.css
@@ -10,7 +10,6 @@ body, html {
   font-family: sans-serif;
 }
 
-
 .popup {
   display: flex-root;
 }
@@ -165,6 +164,7 @@ body, html {
   overflow: hidden;
   position: relative;
   width: auto;
+  height: var(--top-bar-height);
 }
 
 .top-bar-item {
@@ -179,26 +179,30 @@ body, html {
   position: relative;
 }
 
-/* Default variables values for grid layout 4 cols x 3 rows */
+/* Default values for grid layout 4 cols x 3 rows */
 :root {
-  --main-layout: auto auto auto auto;
-  --main-width: 24.9vw;
-  --main-height: 31vh;
+  --tiles-layout: auto auto auto auto;
+  --tile-width: 24.9vw;
+  --tile-height: 31vh;
 }
 
 .dashboard {
   border: 0em none;
   display: grid;
   grid-gap: 0em;
-  grid-template-columns: var(--main-layout);
+  grid-template-columns: var(--tiles-layout);
   margin-bottom: 0em;
   overflow: hidden;
   position: relative;
   width: 100%;
+  height: var(--dashboard-height);
 }
 
 .tile-container {
   position: relative;
+  display: grid;
+  height: var(--tile-height);
+  width: var(--tile-width);
 }
 
 .tile-error {
@@ -282,41 +286,23 @@ body, html {
   text-decoration: none;
 }
 
-.tile-image, .focused-tile-image {
+.tile-image, .tile-iframe, .tile-video, .focused-tile-image, .focused-tile-iframe, .focused-tile-video {
   align-items: center; /* Vertical centering */
+  height: var(--tile-height);
+  width: var(--tile-width);
   border-radius: 0.2em; /* Rounded corners */
   border: 0em none;
   display: flex;
   float: inline-start;
   justify-content: center; /* Horizontal centering */
-  margin-right: 0em;
-  overflow: hidden;
-  position: relative;
-}
-
-.tile-image, .tile-iframe {
-  height: var(--main-height);
-  width: var(--main-width);
-}
-
-.focused-tile-image, .focused-tile-iframe {
-  height: 100%;
-  width: 100%;
-}
-
-.tile-iframe, .focused-tile-iframe {
-  border-radius: 0.2em; /* Rounded corners */
-  border: 0em none;
-  display: flex;
-  float: inline-start;
   margin: 0;
   overflow: hidden;
   position: absolute; /* it must be absolute */
 }
 
-.tile-image img, .focused-tile-image img {
-  height: auto;
-  width: inherit;
+.focused-tile-image, .focused-tile-iframe, .focused-tile-video {
+  height: 100%;
+  width: 100%;
 }
 
 .tile-title {
@@ -335,7 +321,7 @@ body, html {
   padding-right: 0.3vw;
   position: absolute;
   top: 6%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   z-index: 2;
 }
 
@@ -438,33 +424,35 @@ body, html {
   bottom: 0;
   box-sizing: border-box;
   font-size: 2vh;
-  font-weight: bold;
+  font-weight: normal;
   overflow: hidden;
   padding: 0em;
-  position: fixed;
+  margin: 0em;
+  position: relative;
   white-space: nowrap;
   width: 100%;
 }
 
 .feeds-container {
   animation-play-state: running;
-  animation: ticker var(--ticker-duration, 90s) linear infinite;
+  animation: ticker var(--ticker-duration, 180s) linear infinite;
   display: inline-block;
-  font-size: 0.9em;
-  padding-left: 100%;
+  height: 2em;
+}
+
+.feed-container {
+  padding-left: 0.5em;
 }
 
 .feed-item {
   color: goldenrod;
-  font-weight: normal;
-  margin-right: 1.3em;
+  margin-right: 1em;
   text-decoration: none;
 }
 
 .feed-title {
   color: lightgrey;
-  font-weight: normal;
-  margin-right: 1.3em;
+  margin-right: 1em;
   text-decoration: none;  
 }
 
